--- a/VictoriaBridge/VictoriaBridge/VictoriaBridge.csproj
+++ b/VictoriaBridge/VictoriaBridge/VictoriaBridge.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bridge.cs" />
+    <Compile Include="MCTWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
